# stin

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  dockerfile
.github/workflows/: gendocs.yml  test.yml
Docs/: SRS-1.odt  SRS.odt  keyList.txt
Docs/Coverage/Html/: coverage.Bot.cpp.82a0e0141623b9e8c38fbf9f21170c42.html  coverage.HttpConnection.cpp.8357d5d1a7b684a2639b8b84c9ea5dd9.html  coverage.HttpConnection.h.6de40f360569a56fe4deff150186fe32.html  coverage.HttpCore.cpp.f20fe0f15960a273e6fd534f92eed67b.html  coverage.Logger.cpp.aa94fcfbb9f8af6c5a7524b6e601caeb.html  coverage.Logger.h.bde0645c0a15248940e9607f294bf005.html  coverage.Main.cpp.6f704dfdb1181e64de7444a1ccd2a276.html  coverage.Money.h.7129eb000e08f426709d1c20274b9fb8.html  coverage.MoneyCash.cpp.2c91e54f57e55051e9c432877f84b29f.html  coverage.MoneyCash.cpp.f64adbac7f3fbef42b0ca0648ac2ce23.html  coverage.ReadArgs.cpp.eaf799fa9b27bf71c4d4ae36098c386d.html  coverage.Request.cpp.23e276f8d20348a651f692019718737b.html  coverage.Res.cpp.0b8cbe330c933a3714cecb54ac1ecdd2.html  coverage.Resoruce.h.b34959229398b7f40124fc6b374ab6f7.html  coverage.ResourceData.cpp.38b285d39f4941a04f7695da728685f9.html  coverage.ResourceData.cpp.9503e52a960205caff30e41df145d13d.html  coverage.Resources.cpp.9d4c0bd20c9af1bf1a016d3e9f64ad5f.html  coverage.Resources.cpp.df1abdb9ccdedef1134dddd170833cf3.html  coverage.StringHelpers.h.2f61f6c0190949afe1406f749d10e97d.html  coverage.WebReader.cpp.b172098115d4a1062cdd7e065c74c3f3.html  coverage.functions.html  coverage.html  coverage.utils.cpp.4d3039dff574b788948119de402ca8d9.html
Docs/Coverage/Sonarqube/: coverage.xml
lib/: CMakeLists.txt  gtestSrc.cpp
res/ui/: BotClient.js  BotVisual.css
src/: Bot.cpp  Bot.h  HttpConnection.cpp  HttpConnection.h  HttpCore.cpp  HttpCore.h  Logger.cpp  Logger.h  Main.cpp  Money.h  MoneyCash.cpp  MoneyCash.h  ReadArgs.cpp  ReadArgs.h  Request.cpp  Request.h  ResourceData.cpp  Resources.cpp  Resources.h  StringHelpers.h  WebReader.cpp  WebReader.h  utils.cpp  utils.h
src/resources/: MoneyCash.cpp  MoneyCash.h  Res.cpp  Res.h  Resoruce.h  ResourceData.h  Resources.cpp  Resources.h
test/: dummytest.cpp  testBot.cpp  testHttpConnection.cpp  testKeySet.cpp  testLog.cpp  testMoney.cpp  testMoneyCash.cpp  testReadArgs.cpp  testRequest.cpp  testResorceData.cpp  testResources.cpp  testStringHelpers.cpp  testUtils.cpp  testWebReader.cpp
testRes/: testReadable.txt
